[tool.poetry]
name = "mayflower"
version = "0.1.0"
description = "Cross the Atlantic by running Python from JavaScript"
authors = ["thearchitector <elias.gabriel@indicodata.ai>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
    { include = "mayflower/*.py" }
]

[tool.poetry.dependencies]
python = "~3.10"
websockets = "^12.0"
orjson = "^3.10.3"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "I", "ASYNC"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
