[project]
name = "mayflower"
version = "1.0.1"
description = "Cross the Atlantic by running Python from JavaScript"
authors = [
    {name = "Elias Gabriel", email = "oss@eliasfgabriel.com"}
]
dependencies = [
    "websockets<13.0,>=12.0",
    "orjson<4.0.0,>=3.10.3",
]
requires-python = ">=3.10,<4"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["B", "I", "ASYNC"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["mayflower/*.py"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
